--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
-<h1>Coinkidink</h1>
-<p>the+syncronisity+experiment</p>
-<%= link_to "how it works", "#" %>
+<div class="jumbotron center">
+	<h1>Coinkidink</h1>
+	<p>the synchronicity experiment</p>
+	<p>
+       <%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
+       <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
+  </p>    
+</div>
