--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -3,7 +3,9 @@
 <table>
   <thead>
     <tr>
+      <th>Image</th>
       <th>Description</th>
+      <th>User</th>
       <th></th>
       <th></th>
       <th></th>
@@ -13,12 +15,14 @@
   <tbody>
     <% @pins.each do |pin| %>
       <tr>
+        <td><%= image_tag pin.image.url(:medium) %></td>
         <td><%= pin.description %></td>
         <td><%= pin.user.email if pin.user %></td>
-        <td><%= link_to 'Show', pin %></td>
+        <td><%= link_to 'Show', pin_path(pin) %></td>
         <% if pin.user == current_user %>
-        <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-        <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
+          <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -26,7 +30,5 @@
 
 <br>
 <% if user_signed_in? %>
-        <%= link_to 'New Dink', new_pin_path %>
-        <% end %>
-
-<%= link_to 'New Pin', new_pin_path %>
+  <%= link_to 'New Pin', new_pin_path %>
+<% end %>
