--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-static-top navbar-default" role="navigation">
+  <div class="container">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -7,20 +8,26 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Pinteresting</a>
+    <%= link_to "Coin*Ki*Dink", root_path, class: "navbar-brand" %>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "About", about_path %></li> 
-      <% if user_signed_in? %>
-      <li><%= link_to 'New Pin', new_pin_path %></li>
-      <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li> 
-      <% else %>
-      <li><%= link_to "Sign in", new_user_session_path %></li> 
-      <% end %>
-    </ul>
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "How It Works", about_path %></li>
+        <% if user_signed_in? %>
+        <li>
+          <%= link_to new_pin_path do %>
+          <span class="glyphicon glyphicon-plus"></span> New Dink
+            <% end %>
+          </li>
+          <li><%= link_to "Account Settings", edit_user_registration_path %></li>
+          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Sign in", new_user_session_path %></li>
+        <% end %>
+      </ul>
+    </div>
   </div><!-- /.navbar-collapse -->
 </nav>
