--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>How it works</h1>
-<p>describe your moment of syncronisity</p>
+<div class="jumbotron center">
+<h1>How it Works</h1>
+</div>
+<p class="lead"><strong>
+describe your moment of synchronicity </strong>(or *dink)</p>
+<h4> add a photo <small> (optional) </small> </h4>
