--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron center">
 <h1>How it Works</h1>
 </div>
-<p class="lead"><strong>
+<p class="lead"><strong><h4> <small> use your best </small> 250 <small> characters </small> </h4>
 describe your moment of synchronicity </strong>(or *dink)</p>
 <h4> add a photo <small> (optional) </small> </h4>
