--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,3 +4,5 @@
 <p class="lead"><strong><h4> <small> use your best </small> 250 <small> characters </small> </h4>
 describe your moment of synchronicity </strong>(or *dink)</p>
 <h4> add a photo <small> (optional) </small> </h4>
+<p><small>if your dink is too long it will automatically delete after you post along with photo.</p></small>
+<p><small>highlight and copy text first to allow yourself to trim dink to acceptible length, reducing frustration. </p></small>
